refactor: alterar o dto retorno para listagem dos projetos